Fri May 12 19:18:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bug fixes to the TCP server

Fri May 12 18:48:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make OmDatabaseGroup now stores opened databases, rather than
	  their parameters.

	* OmDatabaseGroup::InternalInterface now uses a method in
	  OmDatabaseGroup::Internal to get_multidatabase.  Same MultiDatabase
	  is returned after each call, unless a database has been added.
	  Pthread locking is also sorted out.

Fri May 12 18:29:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New class OmDatabaseGroup::InternalInterface, used to extend
	  the OmDatabaseGroup interface for internal use.
	
	* ProgServer's implementation mostly moved into new SocketServer.

	* New class TcpServer deriving from SocketServer

Fri May 12 16:10:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove set_root() method and "root" member from IRDatabase, and
	  subclasses.  This is now catered for by stats and weighting
	  objects.

Thu May 11 18:51:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add constructor to MultiDatabase, taking a vector of IRDatabase
	  pointers.

	* Store subdatabases in MultiDatabase in a vector of reference
	  counted pointers, rather than as pointers.  This has no actual
	  effect yet, but will do when we extend the use of these pointers
	  to the rest of the code (currently we pass them out as standard
	  pointers)

Thu May 11 17:05:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add rule so that internaltest will compile with special CFLAGS,
	  to ignore access control.

Thu May 11 16:40:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make OmRefCntBase::ref_count mutable, and ref_increment() and
	  ref_decrement() into const methods, so that we can have reference
	  counted access to const objects.

	* Make DATerm and DBTerm objects reference counted, and store